--- a/git/1.md
+++ b/git/1.md
@@ -25,3 +25,15 @@ git reset --hard HEAD^
 - `git reset HEAD^` : 위와 동일
 - `git reset HEAD~2` : 마지막 2개의 commit 취소
 - `git reset --hard HEAD^` : commit 취소 후, 해당 파일을 unstaged 상태로 삭제
+
+## 이미 올라간 파일에 .gitignore 적용 안될 경우
+
+초기에 .gitignore을 설정하지 않았다가 나중에 추가해도 이미 추가한 파일들을 tracking 하고있기 때문에 이미 트랙킹 중인 파일들이 무시 되지 않는다.
+
+```bash
+git rm --cached .
+git add .
+git commit -m "Udate .gitignore"
+```
+
+—cached 옵션을 사용하면 로컬엔 파일이 남아있지만 원격저장소에만 해당 파일이 삭제된다.
