--- a/git/.gitignore적용안될경우.md
+++ b/git/.gitignore적용안될경우.md
@@ -5,9 +5,10 @@
 초기에 .gitignore을 설정하지 않았다가 나중에 추가해도 이미 추가한 파일들을 tracking 하고있기 때문에 이미 트랙킹 중인 파일들이 무시 되지 않는다.
 
 ```bash
-git rm --cached .
+git rm -r --cached .
 git add .
-git commit -m "Udate .gitignore"
+git commit -m "Update .gitignore"
+git push
 ```
 
 —cached 옵션을 사용하면 로컬엔 파일이 남아있지만 원격저장소에만 해당 파일이 삭제된다.
