--- a/Algorithm/study/1.md
+++ b/Algorithm/study/1.md
@@ -50,53 +50,77 @@ import java.util.Scanner;
 
 public class Main {
 
-  public static void main(String[] args) {
+	public static void main(String[] args) {
 
-    Student st1 = new Student("손오공", "1682");
-    Student st2 = new Student("저팔계", "1772");
-    Student st3 = new Student("사오정", "1813");
+		Student st1 = new Student("손오공", "1682");
+		Student st2 = new Student("저팔계", "1772");
+		Student st3 = new Student("사오정", "1813");
 
-    ArrayList <Student>list = new ArrayList<Student>();
+		ArrayList<Student> list = new ArrayList<Student>();
 
-    list.add(st1);
-    list.add(st2);
-    list.add(st3);
+		list.add(st1);
+		list.add(st2);
+		list.add(st3);
 
-    for (Student stu : list) {
-      System.out.println(stu.getName());
-      System.out.println(stu.getNo());
-    }
+//		for (Student stu : list) {
+//			System.out.println(stu.getName());
+//			System.out.println(stu.getNo());
+//		}
 
-    Scanner scan = new Scanner(System.in);
+		Scanner scan = new Scanner(System.in);
 
-    while (true) {
-      System.out.println("검색 : y, 종료 : n");
-      String input = scan.next();	
+		while (true) {
+			System.out.println("검색 : y, 종료 : n");
+			String input = scan.next();
 
-      if (input.equals("y")) {
-        System.out.println("검색을 시작합니다.");
-        String name = scan.next();
-        boolean flag = false;
+			if (input.equals("y")) {
+				System.out.println("검색을 시작합니다.");
+				System.out.println("--------------------------");
+				System.out.print("검색할 이름을 입력해주세요 : ");
 
-        for (Student stu: list) {
-          if (stu.getName().equals(name)) {
-            System.out.println("해당하는 학생의 학번은:"+stu.getNo());
-            flag = true;
-          }
-        }
+				String name = scan.next();
 
-        if (!flag) {
-          System.out.println("해당하는 학생이름이 없습니다.");
-        }
-                  
-      }
-      else if (input.equals("n")) {
-        break;
-      }
+				// 학생 이름이 ArrayList에 포함 되는지, 아닌지를 판별하기 위한 boolean
+				boolean flag = false;
 
-    }
-    System.out.println("프로그램이 종료되었습니다.");
-  }
-  
+				for (Student stu : list) {
+					if (stu.getName().equals(name)) {
+						System.out.println("해당하는 학생의 학번은:" + stu.getNo());
+						flag = true;
+					}
+				}
+
+				if (!flag) {
+					System.out.println("해당하는 학생이름이 없습니다.");
+				}
+
+			} else if (input.equals("n")) {
+				break;
+			}
+
+		}
+		System.out.println("프로그램이 종료되었습니다.");
+	}
+
 }
+```
+
+### 결과
+
+```bash
+검색 : y, 종료 : n
+y
+검색을 시작합니다.
+--------------------------
+검색할 이름을 입력해주세요 : 사오정
+해당하는 학생의 학번은:1813
+검색 : y, 종료 : n
+y
+검색을 시작합니다.
+--------------------------
+검색할 이름을 입력해주세요 : 샤오미
+해당하는 학생이름이 없습니다.
+검색 : y, 종료 : n
+n
+프로그램이 종료되었습니다.
 ```
