--- a/Algorithm/study/2.md
+++ b/Algorithm/study/2.md
@@ -6,15 +6,71 @@
 << 배열, for >>
 
 ```java
+public class Main {
 
-```
+  public static void main(String[] args) {
 
-```java
+    int arr[] = new int[100];
 
+    // An = An-1 + An-2;  n>=3
+    // a1 = 1, a2 = 1
+    arr[0] = 1;
+    arr[1] = 1;
+
+    for (int i=2; i<100; i++) {
+      arr[i] = arr[i-1] + arr[i-2];
+    }
+
+    for (int i=0; i<=10; i++) {
+      System.out.println(arr[i]);
+    }
+
+    // 2번째 방법
+    // An = An-1 + An-2;  n>=3
+    // a1 = 1, a2 = 1
+    System.out.println();
+
+    int prevPrevNum = 1;  // An-2 
+    int prevNum = 1;      // An-1
+    System.out.println(prevPrevNum);
+    System.out.println(prevNum);
+
+    for (int i=3; i<=10; i++) {
+      int nNum = prevPrevNum+prevNum;
+      System.out.print(nNum);
+
+      prevPrevNum = prevNum;
+      prevNum = nNum;
+    }
+
+  }
+
+}
 ```
 
 ### 결과
 
 ```bash
+1
+1
+2
+3
+5
+8
+13
+21
+34
+55
+89
 
+1
+1
+2
+3
+5
+8
+13
+21
+34
+55
 ```
