--- a/Algorithm/programmers/lv1/약수의합.md
+++ b/Algorithm/programmers/lv1/약수의합.md
@@ -27,5 +27,7 @@ class Solution {
 ```
 
 **설명**
-x는 int형 매개변수이기 때문에 long으로 형변환이 필요하다. 
 
+`i <= n`를 `i <= n/2`로 바꾸고, `return answer + n`로 해도 된다. 소수 중에선 2가 제일 작기 때문이다. 
+
+이 문제는 n이 최대 3000까지만 주어지지만, 만약 1억이 주어진다면 연산을 5천만번 수행해야하고, √n 까지만 반복하는 로직이면 1만번만 수행해도 된다.
