--- a/Algorithm/LeetCode/13.Roman-to-Integer.md
+++ b/Algorithm/LeetCode/13.Roman-to-Integer.md
@@ -58,7 +58,7 @@ class Solution {
         map.put('D', 500);
         map.put('M', 1000);
 
-        for (int i = 0; i < s.length(); i++) {
+        for (int i = s.length() - 1; i >= 0; i--) {
             int val = map.get(s.charAt(i));
 
             if (i < s.length() - 1  && val < map.get(s.charAt(i + 1))) {
