--- a/Algorithm/LeetCode/268.Missing-Number.md
+++ b/Algorithm/LeetCode/268.Missing-Number.md
@@ -65,7 +65,7 @@ class Solution {
 class Solution {
     public int missingNumber(int[] nums) {
         int n = nums.length;
-        int sum = n * (n + 1) / 2; // 가우스 공식
+        int sum = (0 + n) * (n + 1) / 2; // 가우스 공식
         for(int i : nums) {
             sum -= i;
         }
@@ -73,6 +73,12 @@ class Solution {
     }
 }
 ```
+> **가우스 덧셈 공식**이란
+>
+> - 1부터 100까지 더한 값을 구하려고 한다. 1과 100을 더하면 101, 2와 99를 더하면 101이다. 이처럼 101은 50개이다. 간단하게 1과 100을 더한 후, 50을 곱해 50 * 101 = 5050이다. 이것이 가우스 계산법이다.
+>
+> - 첫항과 마지막 항을 더한 뒤 항의 개수를 곱하고 2로 나눈 값
+
 
 **Bit Manipulation**
 
@@ -84,12 +90,37 @@ class Solution {
         for(i = 0; i < nums.length; i++) {
             xor = xor ^ i ^ nums[i];
         }
-
-        return xor ^ 1;
+        return xor ^ i;
     }
 }
 ```
+누락된 숫자를 제외하고 자체적으로 XOR하면 결과는 누락된 숫자가 된다. 
 
+**Binary Search**
+
+```java
+class Solution {
+    public int missingNumber(int[] nums) {
+        Arrays.sort(nums);
+        int left = 0;
+        int right = nums.length;
+        int mid = (left + right) / 2;
+        while(left < right) {
+            mid = (left + right) / 2;
+            if(nums[mid] > mid) {
+                right = mid;
+            } else {
+                left = mid + 1;
+            }
+        }
+        return left;
+    }
+} 
+```
+
+> 배열에 순서대로 되어있으면 `Binary Search` 방법이 좋다.
+> 
+> 그렇지 않으면 `XOR` 방법이 좋다.
 
 ### Related
 [Array](/Data-Structure/Array.md)
