--- a/Algorithm/LeetCode/26.Remove-Duplicates-from-Sorted-Array.md
+++ b/Algorithm/LeetCode/26.Remove-Duplicates-from-Sorted-Array.md
@@ -79,7 +79,7 @@ class Solution {
 
 [Array](/Data-Structure/Array.md)
 
-[Two Pointers](/Algorithm/Two-Pointers.md)
+[Two Pointers](/Algorithm/Type/Two-Pointers.md)
 
 ### See Also
 
