--- a/Algorithm/LeetCode/268.Missing-Number.md
+++ b/Algorithm/LeetCode/268.Missing-Number.md
@@ -129,11 +129,11 @@ class Solution {
 
 [Math](/Java/Math-class.md)
 
-[Binary Search](/Algorithm/Binary-Search.md)
+[Binary Search](/Algorithm/Type/Binary-Search.md)
 
 [Bit Manipulation](/Algorithm/Bit-Manipulation.md)
 
-[Sorting](/Algorithm/Sorting.md)
+[Sorting](/Algorithm/Type/Sorting.md)
 
 
 ### See Also
