--- a/Algorithm/LeetCode/389.Find-the-Difference.md
+++ b/Algorithm/LeetCode/389.Find-the-Difference.md
@@ -96,7 +96,7 @@ public class Solution {
 
 [Bit Manipulation](/Algorithm/Bit-Manipulation.md)
 
-[Sorting](/Algorithm/Sorting.md)
+[Sorting](/Algorithm/Type/Sorting.md)
 
 
 ### See Also
