--- a/Algorithm/LeetCode/27.Remove-Element.md
+++ b/Algorithm/LeetCode/27.Remove-Element.md
@@ -105,7 +105,7 @@ class Solution {
 ### Related
 [Array](/Data-Structure/Array.md)
 
-[Two Pointers](/Algorithm/Two-Pointers.md)
+[Two Pointers](/Algorithm/Type/Two-Pointers.md)
 
 ### See Also
 https://leetcode.com/problems/remove-element/
