--- a/Algorithm/LeetCode/1342.Number-of-Steps-to-Reduce-a-Number-to-Zero.md
+++ b/Algorithm/LeetCode/1342.Number-of-Steps-to-Reduce-a-Number-to-Zero.md
@@ -82,6 +82,12 @@ class Solution {
 }
 ```
 
+### Related
+
+[Math](/Java/Math-class.md)
+
+[Bit Manipulation](/Algorithm/Bit-Manipulation.md)
+
 ### See Also
 
 https://leetcode.com/problems/number-of-steps-to-reduce-a-number-to-zero/
