--- a/Algorithm/LeetCode/1672.Richest-Customer-Wealth.md
+++ b/Algorithm/LeetCode/1672.Richest-Customer-Wealth.md
@@ -1,51 +1,59 @@
+## Description
+
 You are given an `m x n` integer grid `accounts` where `accounts[i][j]` is the amount of money the `i​​​​​​​​​​​th​​​​` customer has in the `j​​​​​​​​​​​th`​​​​ bank. Return _the **wealth** that the richest customer has._
 
 A customer's **wealth** is the amount of money they have in all their bank accounts. The richest customer is the customer that has the maximum **wealth**.
 
 정수형 m x n 으로 만들어진 배열 accounts(계좌)가 있다.
-accounts[i][j]는 [i]번째 고객이 [j]번째 은행에 가지고 있는 돈이다.
+accounts\[i]\[j]는 \[i]번째 고객이 \[j]번째 은행에 가지고 있는 돈이다.
 이 중 가장 부유한 고객의 재산을 리턴하라.
 
 재산은 고객들이 모든 은행계좌에 있는 돈을 나타내고, 가장 부유한 고객은 가장 많은 재산을 갖고있는 고객이다. 
 
-### Example 1:
+**Example 1:**
 
-- Input: accounts = [[1,2,3],[3,2,1]]
-- Output: 6
-- Explanation:
+> **Input:** accounts = \[\[1,2,3],\[3,2,1]]
+> 
+> **Output:** 6
+> 
+> **Explanation:**
+> 
+> `1st customer has wealth = 1 + 2 + 3 = 6`
+> 
+> `2nd customer has wealth = 3 + 2 + 1 = 6`
+> 
+> Both customers are considered the richest with a wealth of 6 each, so return 6.
 
-	`1st customer has wealth = 1 + 2 + 3 = 6`
+**Example 2:**
 
-	`2nd customer has wealth = 3 + 2 + 1 = 6`
-    
-	Both customers are considered the richest with a wealth of 6 each, so return 6.
+> **Input:** accounts = \[\[1,5],\[7,3],\[3,5]]
+> 
+> **Output:** 10
+> 
+> **Explanation:** 
+> 
+> 1st customer has wealth = 6
+> 
+> 2nd customer has wealth = 10 
+> 
+> 3rd customer has wealth = 8
+> 
+> The 2nd customer is the richest with a wealth of 10.
 
-### Example 2:
+**Example 3:**
 
-- Input: accounts = [[1,5],[7,3],[3,5]]
-- Output: 10
-- Explanation: 
+> **Input:** accounts = \[\[2,8,7],\[7,1,3],\[1,9,5]]
+> 
+> **Output:** 17
 
-	1st customer has wealth = 6
-
-	2nd customer has wealth = 10 
-
-	3rd customer has wealth = 8
-
-	The 2nd customer is the richest with a wealth of 10.
-
-### Example 3:
-
-- Input: accounts = [[2,8,7],[7,1,3],[1,9,5]]
-- Output: 17
-
-### Constraints:
+**Constraints:**
 
 - `m == accounts.length`
 - `n == accounts[i].length`
 - `1 <= m, n <= 50`
 - `1 <= accounts[i][j] <= 100`
 
+## Solution
 ### Code
 ```java
 class Solution {
@@ -84,6 +92,11 @@ for(int i =0;i<accounts.length;i++){
 }
 return res;
 ```
+### Related
+
+[Array](/Data-Structure/Array.md)
+
+[Matrix](/Algorithm/Type/Matrix-Multiplication.md)
 
 ### See Also
 https://leetcode.com/problems/richest-customer-wealth/
