--- a/Algorithm/LeetCode/876.Middle-of-the-Linked-List.md
+++ b/Algorithm/LeetCode/876.Middle-of-the-Linked-List.md
@@ -1,18 +1,24 @@
+## Description
+
 Given the `head` of a singly linked list, return the middle node of the linked list.
 
 If there are two middle nodes, return **the second middle** node.
 
-### Example 1:
+**Example 1:**
 
-- Input: head = [1,2,3,4,5]
-- Output: [3,4,5]
-- Explanation: The middle node of the list is node 3.
+> **Input:** head = [1,2,3,4,5]
+> 
+> **Output:** [3,4,5]
+> 
+> **Explanation:** The middle node of the list is node 3.
 
-### Example 2:
+**Example 2:**
 
-- Input: head = [1,2,3,4,5,6]
-- Output: [4,5,6]
-- Explanation: Since the list has two middle nodes with values 3 and 4, we return the second one.
+> **Input:** head = [1,2,3,4,5,6]
+> 
+> **Output:** [4,5,6]
+> 
+> **Explanation:** Since the list has two middle nodes with values 3 and 4, we return the second one.
 
 ### Constraints:
 
@@ -30,8 +36,9 @@ public class ListNode {
 }
 ```
 
+## Solution
 ### Code
-**Soultion 1. List length check, ArrayList**
+**ArrayList**
 ```java
 class Solution {
     public ListNode middleNode(ListNode head) {
@@ -50,7 +57,7 @@ class Solution {
 ```
 LinkedList의 length을 구해 중간 인덱스의 node를 찾는다. head가 null가 아닐 동안 array에 head를 추가한 후, head를 head.next로 초기화하고 length를 증가시킨다. 루프문이 끝나면 array.get()으로 전체 길이 / 2를 한 인덱스를 꺼내 반환한다. 
 
-**Soultion 2. Pointer**
+**Pointer**
 ```java
 class Solution {
     public ListNode middleNode(ListNode head) {
@@ -71,7 +78,10 @@ class Solution {
 
 middle은 한칸씩 가고, end은 두칸씩 가는 포인터이다. end 포인터가 마지막에 있을 때 middle 포인터의 위치를 반환하면 된다. 
 
-자세한 내용은 [LinkedList](/Data-Structure/Linked-List.md)을 참조하시오.
+### Related
+[Linked List](/Data-Structure/Linked-List.md)
+
+[Two Pointers](/Algorithm/Type/Two-Pointers.md)
 
 ### See Also
 
