--- a/Algorithm/LeetCode/9.Palindrome-Number.md
+++ b/Algorithm/LeetCode/9.Palindrome-Number.md
@@ -1,27 +1,36 @@
+## Description
+
 Given an integer `x`, return `true` if `x` is a **palindrome**, and `false` otherwise.
 
-### Example 1:
+**Example 1:**
 
-- Input: x = 121
-- Output: true
-- Explanation: 121 reads as 121 from left to right and from right to left.
+> **Input:** x = 121
+> 
+> **Output:** true
+> 
+> **Explanation:** 121 reads as 121 from left to right and from right to left.
   
-### Example 2:
+**Example 2:**
 
-- Input: x = -121
-- Output: false
-- Explanation: From left to right, it reads -121. From right to left, it becomes 121-. Therefore it is not a palindrome.
+> **Input:** x = -121
+> 
+> **Output:** false
+> 
+> **Explanation:** From left to right, it reads -121. From right to left, it becomes 121-. Therefore it is not a palindrome.
 
-### Example 3:
+**Example 3:**
 
-- Input: x = 10
-- Output: false
-- Explanation: Reads 01 from right to left. Therefore it is not a palindrome.
+> **Input:** x = 10
+> 
+> **Output:** false
+> 
+> **Explanation:** Reads 01 from right to left. Therefore it is not a palindrome.
 
-### Constraints:
+**Constraints:**
 
 - `-2^31 <= x <= 2^31 - 1`
 
+## Solution
 ### Code
 ```java
 class Solution {
@@ -43,6 +52,10 @@ class Solution {
 }
 ```
 0보다 작다면 음수라 -가 붙기 때문에 false로 리턴한다. 그리고 숫자를 reverse한다. 나머지를 구하고 그 다음 반복에선 *10을 해준다. 마지막으로 x의 값과 reverse한 값이 같은지 확인한다.  
+
+### Related
+
+[Math](/Java/Math-class.md)
 
 ### See Also
 
