--- a/Algorithm/LeetCode/13.Roman-to-Integer.md
+++ b/Algorithm/LeetCode/13.Roman-to-Integer.md
@@ -1,3 +1,5 @@
+## Description
+
 Roman numerals are represented by seven different symbols: `I`, `V`, `X`, `L`, `C`, `D` and `M`.
 
 Symbol   |    Value
@@ -20,30 +22,37 @@ Roman numerals are usually written largest to smallest from left to right. Howev
 
 Given a roman numeral, convert it to an integer.
 
-### Example 1:
+**Example 1:**
 
-- Input: s = "III"
-- Output: 3
-- Explanation: III = 3.
+> **Input:** s = "III"
+> 
+> **Output:** 3
+> 
+> **Explanation:** III = 3.
 
-### Example 2:
+**Example 2:**
 
-- Input: s = "LVIII"
-- Output: 58
-- Explanation: L = 50, V= 5, III = 3.
+> **Input:** s = "LVIII"
+> 
+> **Output:** 58
+> 
+> **Explanation:** L = 50, V= 5, III = 3.
 
-### Example 3:
+**Example 3:**
 
-- Input: s = "MCMXCIV"
-- Output: 1994
-- Explanation: M = 1000, CM = 900, XC = 90 and IV = 4.
+> **Input:** s = "MCMXCIV"
+> 
+> **Output:** 1994
+> 
+> **Explanation:** M = 1000, CM = 900, XC = 90 and IV = 4.
   
-### Constraints:
+**Constraints:**
 
 - `1 <= s.length <= 15`
 - `s` contains only the characters `('I', 'V', 'X', 'L', 'C', 'D', 'M')`.
 - It is **guaranteed** that s is a valid roman numeral in the range `[1, 3999]`.
 
+## Solution
 ### Code
 ```java
 class Solution {
@@ -73,6 +82,12 @@ class Solution {
 }
 ```
 `i < s.length() - 1` 조건을 사용하여 현재 기호가 오른쪽 기호보다 작은 값을 가지고 있는지 확인한다. true인 경우엔 결과값에서 val을 빼고, false라면 더한다.  
+
+### Related
+
+[Hash Table](/Data-Structure/Hash-Table.md)
+
+[Math](/Java/Math-class.md)
 
 ### See Also
 
