--- a/Algorithm/LeetCode/383.Ransom-Note.md
+++ b/Algorithm/LeetCode/383.Ransom-Note.md
@@ -1,27 +1,32 @@
+## Description
+
 Given two strings `ransomNote` and `magazine`, return `true` if `ransomNote` can be constructed by using the letters from `magazine` and `false` otherwise.
 
 Each letter in `magazine` can only be used once in `ransomNote`.
 
 magazine을 구성하는 문자로 ransomNote와 동일한 문자열을 만들 수 있는지
 
-### Example 1:
-- Input: ransomNote = "a", magazine = "b"
-- Output: false
+**Example 1:**
+> **Input:** ransomNote = "a", magazine = "b"
+> 
+> **Output:** false
 
-### Example 2:
-- Input: ransomNote = "aa", magazine = "ab"
-- Output: false
+**Example 2:**
+> **Input:** ransomNote = "aa", magazine = "ab"
+> 
+> **Output:** false
 
-### Example 3:
-- Input: ransomNote = "aa", magazine = "aab"
-- Output: true
+**Example 3:**
+> **Input:** ransomNote = "aa", magazine = "aab"
+> 
+> **Output:** true
 
-### Constraints:
+**Constraints:**
 - `1 <= ransomNote.length, magazine.length <= 105`
 - `ransomNote` and `magazine` consist of lowercase English letters.
 
+## Solution
 ### Code
-**Soultion 1**
 ```java
 class Solution {
     public boolean canConstruct(String ransomNote, String magazine) {
@@ -44,7 +49,7 @@ class Solution {
 
 그 다음 ransomNote의 char배열을 전체 반복한다. 여기서 알파벳 카운터 배열의 값이 0과 동일하다면 false를 리턴하고, 아니라면 알파벳 배열의 값을 1 감소시킨다. 
 
-**Soultion 2. HashMap**
+**HashMap**
 ```java
 class Solution {
     public boolean canConstruct(String ransomNote, String magazine) {
@@ -69,6 +74,12 @@ magazine의 문자열을 map의 key값으로 추가하고, value값에 +1을 해
 그 다음 ransomNote의 문자들을 key값으로 map에서 찾아온다. 만약 ransomNote의 문자가 key값에 존재하지 않거나, 가져온 key값의 value가 1보다 작은 조건을 충족한다면 false을 return한다. 
 
 존재한다면 map의 key에 ransomNote의 한 문자와 value에 기존 value값에 -1을 해준다. 
+
+### Related
+
+[Hash Table](/Data-Structure/Hash-Table.md)
+
+[Counting](/Algorithm/Type/Counting-Sort.md)
 
 ### See Also
 
