--- a/Algorithm/LeetCode/66.Plus-One.md
+++ b/Algorithm/LeetCode/66.Plus-One.md
@@ -34,3 +34,47 @@ Increment the large integer by one and return _the resulting array of digits_.
 - `1 <= digits.length <= 100`
 - `0 <= digits[i] <= 9`
 - `digits` does not contain any leading `0`'s.
+
+## Solution
+### Code
+```java
+class Solution {
+    public int[] plusOne(int[] digits) {
+        /*
+        approach
+        배열 digits의 마지막 요소가 9가 아니면 값을 증가시키고 리턴, 9라면 0으로 초기화하는 루프를 반복한다.
+        루프가 끝나면 모든 요소가 0이라는 것이니 배열 digits를 digits의 길이에서 1 더한 길이로 초기화한다.
+        0번째 인덱스에 1을 저장하고 리턴한다.
+
+        time complexity : O(n)
+
+        review
+        완전 정석대로 풀었다 ^ㅅ^ 뿌듯해
+        */
+        int length = digits.length;
+
+        for(int i = length - 1; i >= 0 ; i--) {
+            if(digits[i] != 9) {
+                digits[i]++;
+                return digits;
+            } else {
+                digits[i] = 0;
+            }
+        }
+
+        digits = new int[length + 1];
+        digits[0] = 1;
+
+        return digits;
+    }
+}
+```
+
+### Related
+[Array](/Data-Structure/Array.md)
+
+[Math](/Java/Math-class.md)
+
+### See Also
+
+https://leetcode.com/problems/plus-one/description/
