--- a/Algorithm/LeetCode/67.Add-Binary.md
+++ b/Algorithm/LeetCode/67.Add-Binary.md
@@ -1,6 +1,8 @@
 ## Descriptio
 Given two binary strings `a` and `b`, return their sum as a _binary string_.
 
+a+b를 이진문자열로 반환
+
 **Example 1:**
 
 > **Input:** a = "11", b = "1"
@@ -21,12 +23,61 @@ Given two binary strings `a` and `b`, return their sum as a _binary string_.
 
 ## Solution
 ### Code
+**StringBuilder**
 ```java
+class Solution {
+    public String addBinary(String a, String b) {
+        /*
+        approach
+        모르겠다.... 솔루션 봄
 
+        각 이진수의 오른쪽 끝에서 시작하여 숫자와 이월 값을 추가하고 결과를 새 문자열에 저장한다.
+        이제 왼쪽의 다음 숫자로 이동하여 두 이진수의 모든 숫자를 통과할 때까지 프로세스를 반복한다.
+        모든 숫자를 추가한 후 이월 값이 있으면 새 문자열 끝에 추가한다.
+        마지막으로 새 문자열이 반전되어 두 이진수의 합으로 반환한다. 
+
+        time complexity : O(max(n, m))
+
+        review
+        뭘 어떻게 써야할지 몰랐다ㅠ
+        */
+        StringBuilder sb = new StringBuilder();
+        int carry = 0;
+        int i = a.length() - 1;
+        int j = b.length() - 1;
+
+        while (i >= 0 || j >= 0 || carry == 1) {
+            if(i >= 0) carry += a.charAt(i--) - '0';
+            if(j >= 0) carry += b.charAt(j--) - '0';
+            sb.append(carry % 2);
+            carry /= 2;
+        }
+        return sb.reverse().toString();
+    }
+}
 ```
 
-### Related
+**BigInteger**
+```java
+class Solution {
+    public String addBinary(String a, String b) {
+        BigInteger n1 = new BigInteger(a,2);
+        BigInteger n2 = new BigInteger(b,2);
+        BigInteger sum = n1.add(n2);
+        return sum.toString(2);
+    }
+}
+```
 
+
+### Related
+[Math](/Java/Math-class.md)
+
+[Bit Manipulation](/Algorithm/Bit-Manipulation.md)
+
+[StringBuilder](/Java/StringBuilder.md)
+
+[BigInteger](/Java/BigInteger.md)
 
 ### See Also
 
