--- a/Algorithm/LeetCode/70. Climbing Stairs.md
+++ b/Algorithm/LeetCode/70. Climbing Stairs.md
@@ -37,7 +37,6 @@ Each time you can either climb `1` or `2` steps. In how many distinct ways can y
 
 ## Solution
 ### Code
-**Recursion**
 ```java
 class Solution {
     public int climbStairs(int n) {
@@ -45,21 +44,35 @@ class Solution {
         approach
         피보나치를 사용해서 계산한다. 
 
-        time complexity : O(2^n)
+        time complexity : O(n)
 
         review
         다른 방법으로도 풀어보려고 생각하자
         */
-        if(n == 0 || n == 1) {
-            return 1;
-        } 
-        return climbStairs(n - 1) + climbStairs(n - 2);
+        if (n <= 2) {
+            return n;
+        }
+
+        int prev1 = 1;
+        int prev2 = 2;
+
+        for (int i = 3; i <= n; i++) {
+            int temp = prev1 + prev2;
+            prev1 = prev2;
+            prev2 = temp;
+        }
+
+        return prev2;
     }
 }
 ```
 
 ### Related
 [Math](/Java/Math-class.md)
+
+[Dynamic Programming](/Algorithm/Dynamic-Programming.md)
+
+[Memoization](/Algorithm/Memoization.md)
 
 ### See also
 
