--- a/Algorithm/LeetCode/88. Merge Sorted Array.md
+++ b/Algorithm/LeetCode/88. Merge Sorted Array.md
@@ -5,6 +5,8 @@ You are given two integer arrays `nums1` and `nums2`, sorted in **non-decreasing
 
 The final sorted array should not be returned by the function, but instead be stored inside the array nums1. To accommodate this, `nums1` has a length of `m + n`, where the first `m` elements denote the elements that should be merged, and the last `n` elements are set to 0 and should be ignored. `nums2` has a length of `n`.
 
+배열 병합
+
 **Example 1:**
 
 > **Input:** nums1 = [1,2,3,0,0,0], m = 3, nums2 = [2,5,6], n = 3
@@ -12,15 +14,18 @@ The final sorted array should not be returned by the function, but instead be st
 > **Output:** [1,2,2,3,5,6]
 > 
 > **Explanation:** The arrays we are merging are [1,2,3] and [2,5,6].
-The result of the merge is [1,2,2,3,5,6] with the underlined elements coming from nums1.
-Example 2:
+> 
+> The result of the merge is [1,2,2,3,5,6] with the underlined elements coming from nums1.
+
+**Example 2:**
 
 > **Input:** nums1 = [1], m = 1, nums2 = [], n = 0
 > 
 > **Output:** [1]
 > 
 > **Explanation:** The arrays we are merging are [1] and [].
-The result of the merge is [1].
+> 
+> The result of the merge is [1].
 
 **Example 3:**
 
@@ -43,14 +48,52 @@ Note that because m = 0, there are no elements in nums1. The 0 is only there to 
 ## Solution
 ### Code
 ```java
+class Solution {
+    public void merge(int[] nums1, int m, int[] nums2, int n) {
+        /*
+        approach
+        nums1의 m번째 인덱스부터 nums2를 추가하고, sort()함수를 사용해서 num1 배열을 정렬한다.
 
+        time complexity : O((m + n)log(m + n))
+
+        review
+        two pointer 공부하기
+        */
+        for(int i = 0; i < n; i++) {
+            nums1[m + i] = nums2[i];
+        }
+        Arrays.sort(nums1);
+    }
+}
+```
+
+**Two Pointers**
+```java
+class Solution {
+    public void merge(int[] nums1, int m, int[] nums2, int n) {
+        // time complexity : O(m + n)
+        int i = m - 1;
+        int j = n - 1;
+        int k = m + n - 1;
+
+        while(j >= 0) {
+            if(i >= 0 && nums1[i] > nums2[j]) {
+                nums1[k--] = nums1[i--];
+                
+            } else {
+                nums1[k--] = nums2[j--];
+            }
+        }
+    }
+}
 ```
 
 ### Related
-[Array]()
+[Array](/Data-Structure/Array.md)
 
-[Two Pointers]()
+[Two Pointers](/Algorithm/Type/Two-Pointers.md)
 
+[Sorting](/Algorithm/Type/Sorting.md)
 
 ### See also
-
+https://leetcode.com/problems/merge-sorted-array/description/
