--- a/Algorithm/LeetCode/1512. Number of Good Pairs.md
+++ b/Algorithm/LeetCode/1512. Number of Good Pairs.md
@@ -58,6 +58,23 @@ class Solution {
 }
 ```
 
+**HashMap**
+```java
+class Solution {
+    public int numIdenticalPairs(int[] nums) {
+        // time complexity : O(n)
+        Map<Integer, Integer> map = new HashMap<>();
+        int cnt = 0;
+
+        for(int i : nums) {
+            cnt += map.getOrDefault(i, 0);
+            map.put(i, map.getOrDefault(i, 0) + 1);
+        }
+        return cnt;
+    }
+}
+```
+
 ### Related
 [Array](/Data-Structure/Array.md)
 
