--- a/Algorithm/LeetCode/144. Binary Tree Preorder Traversal.md
+++ b/Algorithm/LeetCode/144. Binary Tree Preorder Traversal.md
@@ -1,6 +1,8 @@
 ## Description
 Given the `root` of a binary tree, return _the preorder traversal of its nodes' values._
 
+이진 트리 주어지면 노드 값 순서 순회 반환
+
 **Example 1:**
 
 >  **Input:** root = \[1,null,2,3]
