--- a/Algorithm/LeetCode/145. Binary Tree Postorder Traversal.md
+++ b/Algorithm/LeetCode/145. Binary Tree Postorder Traversal.md
@@ -1,6 +1,8 @@
 ## Description
 Given the `root` of a binary tree, return _the postorder traversal of its nodes' values_.
 
+이진 트리 주어지면 노드 값 후위 순회 반환
+
 **Example 1:**
 
 > **Input:** root = \[1,null,2,3]
@@ -15,9 +17,9 @@ Given the `root` of a binary tree, return _the postorder traversal of its nodes'
 
 **Example 3:**
 
-> **Input:** root = [1]
+> **Input:** root = \[1]
 > 
-> **Output:** [1]
+> **Output:** \[1]
  
 **Constraints:**
 
@@ -46,17 +48,26 @@ Given the `root` of a binary tree, return _the postorder traversal of its nodes'
 ### Code
 ```java
 class Solution {
-    public List<Integer> postorderTraversal(TreeNode root) {   
+    public List<Integer> postorderTraversal(TreeNode root) {
+        /*
+        approach
+        stack 선언하고 스택에 root를 넣고, stack의 제일 위에 있는 요소를 제거하면서 임의의 값에 넣는다.
+        후위 순회이기때문에 list 0번째 인덱스에 계속 값을 넣으면 후위 순회가 된다.
+
+        time complexity : O(n)
+
+        review
+        기초를 잘 다져야겠다!
+        */
         List<Integer> list = new ArrayList<>();
         Stack<TreeNode> stack = new Stack<>();
-        Stack<TreeNode> out = new Stack<>();
         
         if(root == null) return list;
         stack.push(root);
 
         while(!stack.empty()) {
             TreeNode temp = stack.pop();
-            out.push(temp);
+            list.add(0, temp.val);
 
             if(temp.left != null) {
                 stack.push(temp.left);
@@ -65,11 +76,6 @@ class Solution {
                 stack.push(temp.right);
             }
         }
-
-        while(!out.empty()) {
-            list.add(out.pop().val);
-        }
-        
         return list;
     }
 }
