--- a/Algorithm/LeetCode/226. Invert Binary Tree.md
+++ b/Algorithm/LeetCode/226. Invert Binary Tree.md
@@ -2,6 +2,8 @@
 
 Given the `root` of a binary tree, invert the tree, and return _its root_.
 
+이진 트리 반전
+
 **Example 1:**
 
 > **Input:** root = \[4,2,7,1,3,6,9]
@@ -58,9 +60,9 @@ class Solution {
         time complexity : O(n)
 
         review
-        솔루션 봤당 ㅠ
+        아직 트리는 많이 모자란듯
         */
-        List<TreeNode> list = new LinkedList<TreeNode>();
+        LinkedList<TreeNode> list = new LinkedList<TreeNode>();
         if(root != null){
             list.add(root);
         }
@@ -74,6 +76,19 @@ class Solution {
             temp.left = temp.right;
             temp.right = curr;
         }
+        return root;
+    }
+}
+```
+
+**Recursion**
+```java
+public class Solution {
+    public TreeNode invertTree(TreeNode root) {
+        if(root == null) return null;
+        TreeNode tmp = root.left;
+        root.left = invertTree(root.right);
+        root.right = invertTree(tmp);
         return root;
     }
 }
