--- a/Algorithm/LeetCode/1528. Shuffle String.md
+++ b/Algorithm/LeetCode/1528. Shuffle String.md
@@ -1,58 +1,48 @@
 ## Description
-You are given a string `s` and an integer array `indices` of the **same length**. The string `s` will be shuffled such that the character at the `i^th` position moves to `indices[i]` in the shuffled string.
+Given an array `nums` of size `n`, return _the majority element_.
 
-Return the _shuffled string_.
+The majority element is the element that appears more than `⌊n / 2⌋` times. You may assume that the majority element always exists in the array.
 
-indices배열에 나열된 숫자를 오름차순으로 s 문자열을 재배열한다.
+제일 많은 숫자
 
 **Example 1:**
 
-> **Input:** s = "codeleet", indices = \[4,5,6,7,0,2,1,3]
+> **Input:** nums = \[3,2,3]
 > 
-> **Output:** "leetcode"
-> 
-> **Explanation:** As shown, "codeleet" becomes "leetcode" after shuffling.
+> **Output:** 3
 
 **Example 2:**
 
-> **Input:** s = "abc", indices = \[0,1,2]
+> **Input:** nums = \[2,2,1,1,1,2,2]
 > 
-> **Output:** "abc"
-> 
-> **Explanation:** After shuffling, each character remains in its position.
+> **Output:** 2 
 
 **Constraints:**
 
-- `s.length == indices.length == n`
-- `1 <= n <= 100`
-- `s` consists of only lowercase English letters.
-- `0 <= indices[i] < n`
-- All values of `indices` are **unique**.
+- `n == nums.length`
+- `1 <= n <= 5 * 10^4`
+- `-10^9 <= nums[i] <= 10^9`
+
+**Follow-up:** Could you solve the problem in linear time and in `O(1)` space?
 
 ## Solution
 ### Code
 ```java
 class Solution {
-    public String restoreString(String s, int[] indices) {
+    public int majorityElement(int[] nums) {
         /*
         approach
-        빈 배열을 생성하고 배열에 indices배열의 값을 인덱스로 삼아 s문자열을 삽입한다.
-
-        time complexity : O(n)
+        Arrays클래스의 sort를 이용하여 정렬한다.
+        배열이 정렬되면 제일 발생횟수가 많은 요소가 중간에 오게된다.
+        따라서 본래 nums의 길이에서 2를 나눈 nums 인덱스의 요소를 반환한다.
+              
+        time complexity : O(nlogn)
 
         review
-        저번엔 stinrgbuilder를 잘 활용 못했었는데 이번엔 잘 활용했다
+        아주 간단하군
         */
-        int length = s.length();
-        char c[] = new char[length];
-        StringBuilder sb = new StringBuilder("");
-
-        for(int i = 0; i < length; i++) {
-            c[indices[i]] = s.charAt(i);
-        }
-
-        sb.append(c);
-        return sb.toString();
+        Arrays.sort(nums);
+        return nums[nums.length / 2];
     }
 }
 ```
@@ -61,6 +51,15 @@ class Solution {
 
 [Array](/Data-Structure/Array.md)
 
+[Hash Table](/Data-Structure/Hash-Table.md)
+
+[Divide and Conquer](/Algorithm/Type/Divide-and-Conquer.md)
+
+[Sorting](/Algorithm/Type/Sorting.md)
+
+[Counting](/Algorithm/Type/Counting-Sort.md)
+
 ### See also
 
-https://leetcode.com/problems/shuffle-string/description/
+https://leetcode.com/problems/majority-element/description/
+
