--- a/Algorithm/LeetCode/509. Fibonacci Number.md
+++ b/Algorithm/LeetCode/509. Fibonacci Number.md
@@ -49,13 +49,14 @@ class Solution {
         review
         피보나치 기초에 대해 더 알게되었다
         */
-        int f[] = new int[n + 1];
-        int i;
+        if (n <= 1) return n;
 
-    	f[0] = 1;
+        int f[] = new int[n + 1];
+
+    	f[0] = 0;
 	    f[1] = 1;
 
-	    for (i = 2; i <= n; i++) {
+	    for(int i = 2; i <= n; i++) {
 		    f[i] = f[i - 1] + f[i - 2];
 	    }
 
@@ -63,6 +64,19 @@ class Solution {
     }
 }
 ```
+
+**Recursion**
+```java
+public static int fib(int n) {
+    // time complexity : O(2^n)
+	if (n <= 1) {
+		return n;
+	}
+
+	return fib(n - 1) + fib(n - 2);
+}
+```
+
 
 ### Related
 
